Got rid of momentum-based scrolling on mobile to fix scrolling bug

--- a/client/src/pages/Info/style.css
+++ b/client/src/pages/Info/style.css
@@ -3,7 +3,7 @@
     text-align:center;
     overflow-y:scroll;
     height:100vh;
-    -webkit-overflow-scrolling:touch;
+    /* -webkit-overflow-scrolling:touch; */
 }
 
 h1 {
